force-app/main/default/objects/ObjectFromEmailDefaultFields__c/ObjectFromEmailDefaultFields__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Object From Email Default Fields</description>
    <label>Object From Email Default Fields</label>
</CustomObject>