force-app/main/default/objects/ObjectFromEmailDefaultFields__c/fields/Default_Value_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Default_Value_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Value Checkbox</label>
    <type>Checkbox</type>
</CustomField>