force-app/main/default/objects/ObjectFromEmailDefaultFields__c/fields/Default_Value_Date__c.field-meta.xml
<CustomField>
    <fullName>Default_Value_Date__c</fullName>
    <label>Default Value Date</label>
    <type>Date</type>
</CustomField>