force-app/main/default/objects/ObjectFromEmailDefaultFields__c/fields/Default_Value_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Default_Value_DateTime__c</fullName>
    <label>Default Value DateTime</label>
    <type>DateTime</type>
</CustomField>