force-app/main/default/objects/ObjectFromEmailDefaultFields__c/fields/Default_Value_Number__c.field-meta.xml
<CustomField>
    <fullName>Default_Value_Number__c</fullName>
    <label>Default Value Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>