force-app/main/default/objects/ObjectFromEmailDefaultFields__c/fields/Default_Value_Text__c.field-meta.xml
<CustomField>
    <fullName>Default_Value_Text__c</fullName>
    <label>Default Value Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>