force-app/main/default/objects/ObjectFromEmailDefaultFields__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Default_Value_Checkbox__c</columns>
    <columns>Default_Value_Date__c</columns>
    <columns>Default_Value_DateTime__c</columns>
    <columns>Default_Value_Number__c</columns>
    <columns>Default_Value_Text__c</columns>
    <columns>Field_Name__c</columns>
    <columns>Object_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>